                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
- 15-11-2006 added: HQ pixelshader can now handle multiple BT601, BT709, 240M yv12->rgb translation (currently only dvdplayer uses it)
- 15-11-2006 fixed: DVDPlayer would just play mono ac3 in analog mode in a very broken way (this also fixes 3 channel ac3 and 5 channel ac3's)
- 15-11-2006 changed: langecodeexpander to use 50k mem less while not in use, and 10k less when in use, loaded from section in xbe on demand.
- 15-11-2006 deleted: various .cvsignore files
- 15-11-2006 changed: BUILD.BAT to account for svn

----- 2.0.1 -----
 - 11-11-2006 fixed: file listings over samba would not display proper dates.
 - 07-11-2006 fixed: in folders wich only contain a video_ts folder, the folder wouldn't stack to a single item.
 - 07-11-2006 fixed: remote number keys must be mapped to buttons in the dvd when in dvd menu, some dvd's make use of that.
 - 07-11-2006 changed: better logging of failed mplayer attempts
 - 03-11-2006 updated: Dutch language file (Thnx to MrNice).
 - 03-11-2006 changed: XBMC.ResetSkinSettings() now resets the settings instead of removing them.
 - 02-11-2006 changed: .flv files default to the dvdplayer
 - 01-11-2006 fixed: [1586248] http api would not show errors for GetSystemInfo and GetSystemInfoByName
 - 01-11-2006 fixed: random slideshow screensaver wouldnt always be random
 - 01-11-2006 fixed: increased the speed of archive extraction a notch.
 - 01-11-2006 changed: additional logging for replay-tv filesystem to hopefully figure out why it doesn't work anymore for mplayer.
 - 30-10-2006 changed: memory allocation for dll loader, saves around 100k